<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/onboardingFragment">

    <fragment
        android:id="@+id/onboardingFragment"
        android:name="com.connecthub.app.presentation.onboarding.OnboardingFragment"
        android:label="@string/onboarding_title"
        tools:layout="@layout/fragment_onboarding">

        <action
            android:id="@+id/action_onboarding_to_login"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/onboardingFragment"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/loginFragment"
        android:name="com.connecthub.app.presentation.auth.LoginFragment"
        android:label="@string/login_title"
        tools:layout="@layout/fragment_login">

        <action
            android:id="@+id/action_login_to_register"
            app:destination="@id/registerFragment" />

        <action
            android:id="@+id/action_login_to_chatList"
            app:destination="@id/chatListFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/registerFragment"
        android:name="com.connecthub.app.presentation.auth.RegisterFragment"
        android:label="@string/register_title"
        tools:layout="@layout/fragment_register">

        <action
            android:id="@+id/action_register_to_login"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/loginFragment"
            app:popUpToInclusive="true" />

        <action
            android:id="@+id/action_register_to_chatList"
            app:destination="@id/chatListFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>

    <fragment
        android:id="@+id/chatListFragment"
        android:name="com.connecthub.app.presentation.chatlist.ChatListFragment"
        android:label="@string/app_name"
        tools:layout="@layout/fragment_chat_list">

        <action
            android:id="@+id/action_chatList_to_chat"
            app:destination="@id/chatFragment" />

        <action
            android:id="@+id/action_chatList_to_settings"
            app:destination="@id/settingsFragment" />

        <action
            android:id="@+id/action_chatList_to_newChat"
            app:destination="@id/newChatFragment" />
    </fragment>

    <fragment
        android:id="@+id/newChatFragment"
        android:name="com.connecthub.app.presentation.newchat.NewChatFragment"
        android:label="@string/new_chat_title"
        tools:layout="@layout/fragment_new_chat">

        <action
            android:id="@+id/action_newChat_to_chat"
            app:destination="@id/chatFragment"
            app:popUpTo="@id/chatListFragment" />
    </fragment>

    <fragment
        android:id="@+id/chatFragment"
        android:name="com.connecthub.app.presentation.chat.ChatFragment"
        android:label="Chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="com.connecthub.app.presentation.settings.SettingsFragment"
        android:label="@string/action_settings"
        tools:layout="@layout/fragment_settings">

        <action
            android:id="@+id/action_settings_to_login"
            app:destination="@id/loginFragment"
            app:popUpTo="@id/nav_graph"
            app:popUpToInclusive="true" />
    </fragment>

</navigation>
